# git-issues

./: .gitignore  .gitmodules  .issues.json  Makefile  git-issues.cabal  stack.yaml
src/: DevelMain.hs  Main.hs
src/GitIssues/: Types.hs  Web.hs
src/GitIssues/Web/: Styles.hs
webapp/: .gitignore  package.json  semantic.json
webapp/src/browser/: createRoutes.js
webapp/src/browser/app/: App.react.js
webapp/src/browser/home/: Page.css  Page.react.js
webapp/src/browser/issues/: Issue.css  Issue.react.js  IssueEdit.react.js
webapp/src/common/app/: mapDispatchToProps.js  reducer.js
webapp/src/common/issues/: actions.js  reducer.js
