name:                git-issues
version:             0.1.0.0
synopsis:            A way to track issues within a git repository.
homepage:            https://github.com/yamadapc/git-issues
license:             MIT
license-file:        LICENSE
author:              Pedro Tacla Yamada
maintainer:          tacla.yamada@gmail.com
copyright:           Copyright (c) 2015 Pedro Tacla Yamada
category:            Development
build-type:          Simple
cabal-version:       >=1.10

executable git-issues
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9
                     , filepath
                     , directory
                     , bytestring
                     , aeson
                     , raw-strings-qq
                     , read-editor
                     , process
  hs-source-dirs:      src
  default-language:    Haskell2010
